fix autosuggestions container on mobile

--- a/index.css
+++ b/index.css
@@ -205,6 +205,10 @@ body {
         top: 0;
         left: 0;
     }
+    
+    .search-container {
+        margin-top: 13em;
+    }
 
     .search-bar {
         width: 80vw;
